--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -1,45 +1,80 @@
+<div style="background-color:black;color:white;text-align:left">
+
+    <div class="spacing-25"></div>
+    <div class="container">
+        <div class="row">
+            <h1>Account Settings</h1>
+            <a style="color:white;text-transform:uppercase" href="member/{{currentUser.username}}">{{currentUser.id}} | {{currentUser.username}}</a></h4>
+        </div>
+    </div>
+    <div class="spacing-25"></div>
+    
+</div>
+
 <div class="container" style="text-align:left">
-	<h1>Account info</h1>
-    <h3><a href="member/{{currentUser.username}}">{{currentUser.username}}</a></h2><br>
-	<p>edit</p>
-	<form role="form">
-        <div class="form-group">
-            <input class="form-control" name="userName" placeholder="username" title="username" type="text" ng-model="member.username"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="form-group">
-            <input class="form-control" name="firstName" placeholder="first name" title="first name" type="text" ng-model="member.firstName"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="form-group">
-            <input class="form-control" name="lastName" placeholder="last name" title="last name" type="text" ng-model="member.lastName"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="align-right">
-            <button class="btn btn-default log-btn" type="submit" value="submit" ng-click="update()">Save</button>
-        </div>
-    </form>
 
-	<h2>settings</h2>
-	<p>notifications</p>
-	<p>email settings</p>
+    <div class="spacing-15"></div>
 
-	<h2>api keys</h2>
+    <div class="row">
+    	<form role="form">
+            <h4>Username</h4>
+            <div class="form-group">
+                <input class="form-control" name="userName" placeholder="username" type="text" ng-model="member.username"> 
+                <i class="fa fa-user"></i>
+            </div>
+            <h4>First Name</h4>
+            <div class="form-group">
+                <input class="form-control" name="firstName" placeholder="First Name" type="text" ng-model="member.firstName"> 
+                <i class="fa fa-user"></i>
+            </div>
+            <h4>Last Name</h4>
+            <div class="form-group">
+                <input class="form-control" name="lastName" placeholder="Last Name" type="text" ng-model="member.lastName"> 
+                <i class="fa fa-user"></i>
+            </div>
+            <div class="align-right">
+                <button class="btn btn-default log-btn" type="submit" value="submit" ng-click="update()">Save</button>
+            </div>
+        </form>
+    </div>
 
-	<!--poloniex-->
-    <form role="form">
-        <div class="form-group">
-            <input class="form-control" name="apiKey" placeholder="api key" title="api key" type="text" ng-model="member.poloniexApiKey"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="form-group">
-            <input class="form-control" name="apiSecret" placeholder="api secret" title="api secret" type="text" ng-model="member.poloniexApiSecret"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="align-right">
-            <button class="btn btn-default log-btn" type="submit" value="submit" ng-click="update()">Save</button>
-        </div>
-    </form>
+    <div class="spacing-15"></div>
+
+    <div class="row">
+    	<h2>Settings</h2>
+        <p>Investment Strategy</p>
+        <p>Investment Fees</p>
+    	<p>Notifications</p>
+    </div>
+
+    <div class="spacing-15"></div>
+
+    <div class="row">
+        <h2>Wallets</h2>
+    </div>
+
+    <div class="spacing-15"></div>
+
+    <div class="row">
+	   <h2>Exchange API Keys</h2>
+
+	   <!--poloniex-->
+        <form role="form">
+            <div class="form-group">
+                <input class="form-control" name="apiKey" placeholder="api key" title="api key" type="text" ng-model="member.poloniexApiKey"> 
+                <i class="fa fa-user"></i>
+            </div>
+            <div class="form-group">
+                <input class="form-control" name="apiSecret" placeholder="api secret" title="api secret" type="text" ng-model="member.poloniexApiSecret"> 
+                <i class="fa fa-user"></i>
+            </div>
+            <div class="align-right">
+                <button class="btn btn-default log-btn" type="submit" value="submit" ng-click="update()">Save</button>
+            </div>
+        </form>
+    </div>
 
 </div>
+
+<div class="spacing-50"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
