--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -1,9 +1,18 @@
+<div style="background-color:black;color:white;text-align:left">
+
+    <div class="spacing-25"></div>
+    <div class="container">
+    	<div class="row"><h1 ng-click="marketsToggle()"><i style="font-size:30px" class="fa fa-bars"></i> Explore</h1></div>
+    </div>
+    <div class="spacing-25"></div>
+    
+</div>
+
 <div class="container" style="text-align:left">
 
 	<div class="row">
 
 		<!--BTC VALUE VECTOR OVER TIME-->
-		<h1>Markets</h1>
 
 		<!--TODO: MORE EXCHANGES; PAIRS-->
 		<highchart config="chartConfig"></highchart>
@@ -105,8 +114,6 @@
 
         <h3>Neural Networks</h3>
         
-
-
 	</div>
 
 	<div class="row">
