--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -1,114 +1,113 @@
 <div ng-show="currentUser">
-	<div class="container" style="text-align:left">
-		<h1>Dashboard</h1>
-		<p><a href="account">link in wallets, connect api keys, fund account</a></p>
 
-		<span ng-click="sideNavToggle()"><i style="font-size:24px" class="fa fa-bars"></i></span>
-		<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="false">
-			<md-toolbar style="background-color:rgb(35, 170, 159)" class="md-primary md-hue-2">
-			</md-toolbar>
-			<md-content>
-				<md-list>
-					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" style="background:#e8e8e8;">
-						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref=""><span class="pull-left ct-red">Home</span><md-icon class="pull-right"></md-icon></a></h3>
-						</div>
-					</md-list-item>
-					<md-divider ></md-divider>
-					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/markets')">
-						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref="sites"><span class="pull-left ct-red">Markets</span><md-icon class="pull-right"></md-icon></a></h3>
-						</div>
-					</md-list-item>
-					<md-divider ></md-divider>
-					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('member/troverman')">
-						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref="sites"><span class="pull-left ct-red">Portfolio</span><md-icon class="pull-right"></md-icon></a></h3>
-						</div>
-					</md-list-item>
-					<md-divider ></md-divider>
-					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('')">
-						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref="sites"><span class="pull-left ct-red">Trades</span><md-icon class="pull-right"></md-icon></a></h3>
-						</div>
-					</md-list-item>
-					<md-divider ></md-divider>
-				</md-list>
-			</md-content>
-		</md-sidenav>
+	<div style="background-color:black;color:white;text-align:left">
+	    <div class="spacing-25"></div>
+	    <div class="container">
+	        <div class="row">
+	            <h1 ng-click="subNavToggle()" style="text-transform:uppercase"><i style="font-size:30px" class="fa fa-bars"></i> Dashboard</h1>
+	        </div>
+	    </div>
+	    <div class="spacing-25"></div>
+	</div>
+
+	<div class="spacing-25"></div>
+
+	<div class="container" style="text-align:left">
+
+		<div class="row">
+			<p><a href="account">link in wallets, connect api keys, fund account</a></p>
+		</div>
+
+		<div class="spacing-15"></div>
 
 		<div class="row">
 			<div class="col-md-12">
 				<canvas id="doughnut" class="chart chart-doughnut" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>
 			</div>
-			<!--<div class="col-md-4">
+			<!--
+			<div class="col-md-4">
 				<highchart config="chartConfig"></highchart>
-			</div>-->
+			</div>
+			-->
 		</div>
 
-		<div>
+		<div class="spacing-15"></div>
+
+		<div class="row">
 			<p>Available to Trade: {{btcValue}} BTC</p>
 			<p>Order value: {{btcOrderValue}} BTC</p>
 			<p>Protfolio Value: {{btcValue+btcOrderValue}} BTC</p>
 		</div>
 
-		<div class="spacing-10"></div>
-		<h1>Assets</h1>
-		<div>
-			<table class="table table-striped table-hover">
-			    <thead>
-					<tr>
-						<th>Asset</th>
-						<th>Amount</th>
-						<!--<th>Wallet</th>-->
-						<th>UpdatedAt</th>
-					</tr>
-			    </thead>
-			    <tbody>
-					<tr ng-repeat="asset in assets | orderBy:'-amount'">
-						<td>{{asset.symbol}}</td>
-						<td>{{asset.amount}}</td>
-						<!--<td>Wallet</td>-->
-						<td>{{asset.updatedAt | date :  "y MM-dd hh:mm.ss a"}}</td>
-					</tr>
-			    </tbody>
-			</table>
-		</div>
+		<div class="spacing-15"></div>
 
-		<div class="spacing-10"></div>
-		<h1>Order Book</h1>
-		<div>
-			<table class="table table-striped table-hover">
-			    <thead>
-					<tr>
-						<th>Market</th>
-						<th>Type</th><!--not relevant.. just reverse asset1 and 2.. -->
-						<th></th>
-						<th></th>
-						<th>Date</th>
-					</tr>
-			    </thead>
-			    <tbody>
-					<tr ng-repeat="order in orders">
-						<td><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></td>
-						<td>{{order.type}}</td>
-						<td>{{order.amount}} {{order.asset2}}</td>
-						<td>{{order.price}} {{order.asset1}}</td>
-						<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
-					</tr>
-			    </tbody>
-			</table>
-		</div>
-
-		<div class="spacing-10"></div>
-		<h1>markets</h1>
-		<div ng-repeat="pair in tradingPairs">
-			<div class="col-md-3 col-sm-4 col-xs-6 ">
-				<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
+		<div class="row">
+			<h1>Assets</h1>
+			<div>
+				<table class="table table-striped table-hover">
+				    <thead>
+						<tr>
+							<th>Asset</th>
+							<th>Amount</th>
+							<!--<th>Wallet</th>-->
+							<th>UpdatedAt</th>
+						</tr>
+				    </thead>
+				    <tbody>
+						<tr ng-repeat="asset in assets | orderBy:'-amount'">
+							<td>{{asset.symbol}}</td>
+							<td>{{asset.amount}}</td>
+							<!--<td>Wallet</td>-->
+							<td>{{asset.updatedAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+						</tr>
+				    </tbody>
+				</table>
 			</div>
 		</div>
+
+		<div class="spacing-15"></div>
+		<div class="row">
+			<h1>Order Book</h1>
+			<div>
+				<table class="table table-striped table-hover">
+				    <thead>
+						<tr>
+							<th>Market</th>
+							<th>Type</th><!--not relevant.. just reverse asset1 and 2.. -->
+							<th></th>
+							<th></th>
+							<th>Date</th>
+						</tr>
+				    </thead>
+				    <tbody>
+						<tr ng-repeat="order in orders">
+							<td><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></td>
+							<td>{{order.type}}</td>
+							<td>{{order.amount}} {{order.asset2}}</td>
+							<td>{{order.price}} {{order.asset1}}</td>
+							<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+						</tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+
+		<div class="spacing-15"></div>
+
+		<div class="row">
+			<h1>Markets</h1>
+			<div ng-repeat="pair in tradingPairs">
+				<div class="col-md-3 col-sm-4 col-xs-6 ">
+					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
+				</div>
+			</div>
+		</div>
+
 	</div>
+	
+	<div class="spacing-50"></div>
 	<div ng-include="'footer/index.tpl.html'"></div>
+
 </div>
 
 <div ng-show="!currentUser" >
