--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -1,40 +1,198 @@
 <style>
-  .navbar-custom{background-color: #fff; text-align: left;}//border-bottom:1px solid #15b593;}
-  .navbar-custom .navbar-brand:focus{color:#424242}
-  .navbar-custom .navbar-toggle {border-color: white;}
-  .navbar-custom .navbar-toggle .icon-bar{background-color:#424242;}
-  .navbar-custom .navbar-toggle:hover .icon-bar{background-color:#000;}
-  //.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{background-color:black }
+
+    .md-sidenav-backdrop {opacity: 0 !important;}
+
+    .navbar-custom{background-color: #fff; text-align: left;}//border-bottom:1px solid #15b593;}
+    .navbar-custom .navbar-brand:focus{color:#424242}
+    .navbar-custom .navbar-toggle {border-color: white;}
+    .navbar-custom .navbar-toggle .icon-bar{background-color:#424242;}
+    .navbar-custom .navbar-toggle:hover .icon-bar{background-color:#000;}
+    //.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{background-color:black }
+
+    .navIcon{
+        position: relative;
+        float: right;
+        padding: 9px 10px;
+        margin-top: 8px;
+        margin-right: 15px;
+        margin-bottom: 8px;
+        background-color: transparent;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+
+    .navIcon .icon-bar{
+        background-color: #424242;
+        display: block;
+        width: 22px;
+        height: 2px;
+        border-radius: 1px;
+        margin-top: 4px;
+    }
+
 </style>
-<div ng-controller="NavCtrl" class="navbar navbar-custom navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/"><img src="images/tesseract.png" style="height:32px;float:left;margin-top:-3px;margin-right:10px">CRE8.CAPITAL</a>
-      <!--cre8.capital-->
+<div ng-controller="NavCtrl">
+
+    <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="login" md-is-locked-open="false" style="text-align:center;position:fixed;background-color:white;width:70%;max-width:100%">
+        <div class="md-list-item-text" layout="column" style="height:100%;">
+            <div style="text-align:center">
+                <div class="spacing-25"></div>
+
+                <div style="background-color:black;color:white">
+                    <div class="spacing-25"></div>
+                    <div class="row"><h1>Login | Welcome back!</h1></div>
+                    <div class="spacing-25"></div>
+                </div>
+
+                <div class="spacing-25"></div>
+
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <div class="login-form">
+                            <form role="form" method="post" action="/auth/local">
+                                <div class="form-group">
+                                    <input class="form-control" name="identifier" placeholder="Email or Username" title="Username" type="text"> 
+                                    <i class="fa fa-user"></i>
+                                </div>
+                                <div class="form-group log-status">
+                                    <input class="form-control" type="password" name="password" placeholder="Password" title="password"> 
+                                    <i class="fa fa-lock"></i>
+                                </div>
+                                <div class="align-right">
+                                    <button class="btn btn-default log-btn" type="submit" value="submit">Sign in</button>
+                                </div>
+                                <br><br>
+                                <div class="social-log">
+                                    <a style="text-align:center" href="/register"><h4>Need an Account?</h4></a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacing-25"></div>
+
+                <div ng-include="'footer/index.tpl.html'"></div>  
+
+            </div>
+        </div>
+    </md-sidenav>
+
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="markets" md-is-locked-open="false" style="text-align:center;position:fixed;background-color:white;max-width:100%">
+        <div class="spacing-25"></div>
+        <md-toolbar style="background-color:rgb(35, 170, 159)" class="md-primary md-hue-2">
+            <h1 class="md-toolbar-tools">MARKETS</h1>
+        </md-toolbar>
+        <md-content>
+            <md-list>
+                <md-list-item ng-repeat="pair in tradingPairs" class="menu-select md-3-line" md-ink-ripple="#101010" style="background:#e8e8e8;">
+                    <div class="md-list-item-text" layout="column">
+                        <h3><a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}"><span class="pull-left ct-red">{{pair.split('/')[1]}} / {{pair.split('/')[0]}}</span></a></h3>
+                    </div>
+                    <md-divider></md-divider>
+                </md-list-item>
+            </md-list>
+        </md-content>
+    </md-sidenav>
+
+    <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="nav" md-is-locked-open="false" style="position:fixed;background-color:white;">
+        <div class="md-list-item-text" layout="column" style="height:100%;">
+            <div style="text-align:center">
+                <div class="spacing-25"></div>
+                <form style="padding:15px;" role="search" action="/search/" onSubmit="location.href = 'search/' + document.getElementById('search-link').value; return false;">
+                    <div class="form-group">
+                        <input class="form-control" style="margin-top:3px;border-radius:3px;" ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
+                    </div>
+                </form>
+                <h3 ng-show="!currentUser" class="nav-links" style="padding:16px;color:white"><a href="/about">ABOUT</a></h3>
+                <h3 ng-show="currentUser" class="nav-links" style="padding:16px;color:white; text-transform:uppercase"><a href="member/{{currentUser.username}}">{{currentUser.username}}</a></h3>
+                <h3 class="nav-links" style="padding:16px;color:white"><a href="/markets">EXPLORE</a></h3>
+                <h3 ng-show="currentUser" class="nav-links" style="padding:16px;color:white;"><a href="/">PORTFOLIO</a></h3>
+                <h3 class="nav-links" style="padding:16px;color:white"><a href="/account">SETTINGS</a></h3>
+                <h3 ng-show="currentUser" class="nav-links" style="padding:16px;color:white"><a href="/logout">LOGOUT</a></h3>
+                <h3 ng-show="!currentUser" class="nav-links" style="padding:16px;;color:white"><a href="/login">LOGIN</a></h3>
+                <h3 ng-show="!currentUser"class="nav-links" style="padding:16px;;color:white"><a href="/register">REGISTER</a></h3>
+                <div class="spacing-25"></div>
+                <a href="/"><img style="width:50px" src="images/tesseract.png"></a>
+                <div class="spacing-25"></div>
+                <div ng-include="'footer/index.tpl.html'"></div>
+            </div>
+        </div>
+    </md-sidenav>
+
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="subNav" md-is-locked-open="false" style="text-align:center;position:fixed;background-color:white;width:70%;max-width:100%">
+        <md-toolbar style="background-color:rgb(35, 170, 159)" class="md-primary md-hue-2">
+        </md-toolbar>
+        <md-content>
+            <md-list>
+                <md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" style="background:#e8e8e8;">
+                    <div class="md-list-item-text" layout="column">
+                        <h3><a ui-sref=""><span class="pull-left ct-red">Home</span><md-icon class="pull-right"></md-icon></a></h3>
+                    </div>
+                </md-list-item>
+                <md-divider ></md-divider>
+                <md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/markets')">
+                    <div class="md-list-item-text" layout="column">
+                        <h3><a ui-sref="sites"><span class="pull-left ct-red">Markets</span><md-icon class="pull-right"></md-icon></a></h3>
+                    </div>
+                </md-list-item>
+                <md-divider ></md-divider>
+                <md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('member/troverman')">
+                    <div class="md-list-item-text" layout="column">
+                        <h3><a ui-sref="sites"><span class="pull-left ct-red">Portfolio</span><md-icon class="pull-right"></md-icon></a></h3>
+                    </div>
+                </md-list-item>
+                <md-divider ></md-divider>
+                <md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('')">
+                    <div class="md-list-item-text" layout="column">
+                        <h3><a ui-sref="sites"><span class="pull-left ct-red">Trades</span><md-icon class="pull-right"></md-icon></a></h3>
+                    </div>
+                </md-list-item>
+                <md-divider ></md-divider>
+            </md-list>
+        </md-content>
+    </md-sidenav>
+
+    <div class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+
+            <div class="navbar-header">
+                <button class="navbar-toggle" type="button" ng-click="navToggle()">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><img src="images/tesseract.png" style="height:32px;float:left;margin-top:-3px;margin-right:10px">CRE8.CAPITAL</a>
+            </div>
+
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li ng-class="{ active: isActive('/about')}" ng-show="!currentUser"><a href="/about">ABOUT</a></li>
+                    <li ng-class="{ active: isActive('/markets')}"><a href="/markets">EXPLORE</a></li>
+                    <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
+                        <div class="form-group">
+                            <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
+                        </div>
+                    </form>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li ng-class="{ active: isActive('/register')}" ng-show="!currentUser"><a href="/register">REGISTER</a></li>
+                    <li ng-click="loginToggle()" ng-class="{ active: isActive('/login')}" ng-show="!currentUser"><a>LOGIN</a></li>
+                    <li ng-click="navToggle()">
+                        <button class="navIcon" type="button">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            
+        </div>
     </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li ng-class="{ active: isActive('/about')}" ng-show="!currentUser"><a href="/about">ABOUT</a></li>
-        <li ng-class="{ active: isActive('/markets')}"><a href="/markets">EXPLORE</a></li>
-        <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
-          <div class="form-group">
-            <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
-          </div>
-        </form>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li ng-class="{ active: isActive('/account')}" ng-show="currentUser"><a href="/account">{{currentUser.username}}</a></li>
-        <li ng-show="currentUser"><a href="/logout">SIGNOUT</a></li>
-        <li ng-class="{ active: isActive('/register')}" ng-show="!currentUser"><a href="/register">REGISTER</a></li>
-        <li ng-class="{ active: isActive('/login')}" ng-show="!currentUser"><a href="/login">LOGIN</a></li>
-      </ul>
-    </div>
-  </div>
-  <md-progress-linear ng-if="stateIsLoading" md-mode="indeterminate"></md-progress-linear>
+
+    <md-progress-linear ng-if="stateIsLoading" md-mode="indeterminate"></md-progress-linear>
 </div>
